2009-11-02  Ivan Maidanski <ivmai@mail.ru>

	* os_dep.c (brk): Rename to ecos_gc_brk.

2009-11-01  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (min_bytes_allocd): Use GC_stackbottom value to compute
	stack_size even if THREADS.
	* doc/README.macros (DEBUG_THREADS): Document.
	* pthread_support.c (DEBUG_THREADS): Remove the commented out
	definition.
	* win32_threads.c (DEBUG_WIN32_THREADS): Remove duplicate
	definition.
	* win32_threads.c: Include errno.h (except for WinCE).
	* win32_threads.c (GC_win32_start_inner): Copy "start" and "param"
	to local variables, and free "arg" parameter before "start"
	invocation.
	* win32_threads.c (GC_beginthreadex): Set errno to EAGAIN on error
	(instead of calling SetLastError(ERROR_NOT_ENOUGH_MEMORY)).
	* win32_threads.c (GC_beginthreadex): Return 0 on error (instead
	of -1).

2009-10-23  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_darwin_register_mach_handler_thread):
	Use GC_INNER for the function definition.
	* include/private/darwin_stop_world.h
	(GC_darwin_register_mach_handler_thread): Remove the prototype.
	* include/private/darwin_stop_world.h: Add copyright header.
	* os_dep.c (GC_darwin_register_mach_handler_thread): Use GC_INNER
	for the function prototype.
	* include/private/gc_priv.h (NDEBUG): Explicitly define if
	NO_DEBUGGING and not GC_ASSERTIONS (before the standard headers
	inclusion).

2009-10-22  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gcconfig.h: Move DebugBreak() workaround (for
	x86mingw32ce toolchain) to gc_priv.h (after windows.h inclusion).

2009-10-22  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c (GC_unmap_old, GC_merge_unmapped, GC_allochblk,
	GC_freehblk): Use GC_INNER for the function definition.
	* alloc.c (GC_never_stop_func, GC_should_collect,
	GC_try_to_collect_inner, GC_collect_a_little_inner,
	GC_set_fl_marks, GC_add_to_our_memory, GC_add_to_heap,
	GC_expand_hp_inner, GC_collect_or_expand, GC_allocobj): Ditto.