@@ -1,5 +1,12 @@
 2009-11-02  Ivan Maidanski <ivmai@mail.ru>
 
+	* include/private/gcconfig.h (STACKBOTTOM): Add a presence check
+	for eCos/NOSYS.
+	* misc.c (GC_write): Comment out _Jv_diag_write() call (since no
+	longer defined in GCJ).
+
+2009-11-02  Ivan Maidanski <ivmai@mail.ru>
+
 	* os_dep.c (brk): Rename to ecos_gc_brk.
 
 2009-11-01  Ivan Maidanski <ivmai@mail.ru>
